# nonebot-plugin-copywrite

./: README.md  pyproject.toml
nonebot_plugin_copywrite/: __init__.py  chat.py  config.py
nonebot_plugin_copywrite/copywrite/: __init__.py  default.delete.yaml  default.long.yaml  default.short.yaml  fran.long.yaml  fran.short.yaml  life.checkpoint.long.yaml  sujoke.short.yaml
